Make list item in editing events